# wow-assistant

./: .gitignore  README.md  main.py  prompt.md  pyproject.toml  requirements.txt
static/: index.html
