[project]
name = "pythonproject3"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "create-agent>=0.0.3",
    "fastapi>=0.138.1",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "langchain-tavily>=0.2.18",
    "path>=17.1.1",
    "python-dotenv>=1.2.2",
    "sse-starlette>=3.4.5",
    "template>=0.7.6",
    "uvicorn>=0.49.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
